--- a/src/pages/home/index.scss
+++ b/src/pages/home/index.scss
@@ -1,2 +1,7 @@
 @import 'taro-ui/dist/style/components/button.scss';
 @import '~taro-ui/dist/style/components/noticebar.scss';
+
+.charts {
+  width: 750rpx;
+  height: 500rpx;
+}
