--- a/src/pages/home/index.scss
+++ b/src/pages/home/index.scss
@@ -2,6 +2,6 @@
 @import '~taro-ui/dist/style/components/noticebar.scss';
 
 .charts {
-  width: 750rpx;
-  height: 500rpx;
+  width: 750px;
+  height: 500px;
 }
